<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack"
    tools:context=".fragement.PrivacyPolicy">

    <!-- TODO: Update blank fragment layout -->








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        tools:ignore="UselessParent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/privacy"
            android:layout_gravity="center"
            app:civ_border_width="4dp"
            android:layout_marginTop="5dp"
            app:civ_circle_background_color="@color/colorMenu1"
            app:civ_border_color="@color/colorPrimaryDark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacyname"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:textSize="22sp"
            android:textColor="@color/colorMenu1"
            android:gravity="center"/>
        <me.biubiubiu.justifytext.library.JustifyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/colorWhite"

            android:text="@string/privacy"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:id="@+id/back"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonshape"
            android:textColor="@color/colorWhite"
            android:text="@string/go"/>


    </LinearLayout>

</FrameLayout>