<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragement.DeliveryPartner">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/lin1"
        android:background="@color/colorBlack"

        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"

            android:layout_marginTop="150dp"
            android:contentDescription="TODO"
            android:src="@drawable/internet" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/oo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            android:text="@string/ibternetmsg"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trya"
            android:id="@+id/refresh"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorMenu1"
            android:background="@drawable/buttonshape"
            android:layout_gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:id="@+id/lin2"
        android:orientation="vertical">


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@color/colorAccent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:ignore="WebViewLayout">


            <WebView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/webview"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>



</FrameLayout>